--- a/src/pages/404.html
+++ b/src/pages/404.html
@@ -18,12 +18,12 @@
     }
     h1 {
         color: #333;
-        font-size: 24px;
+        font-size: 5rem;
         margin: 50px 0;
     }
     p {
         color: #333;
-        font-size: 16px;
+        font-size: 2rem;
         margin: 20px 0;
     }
     button {
@@ -32,7 +32,7 @@
         border-radius: 5px;
         color: #fff;
         cursor: pointer;
-        font-size: 16px;
+        font-size: 3rem;
         margin: 20px 0;
         padding: 10px 20px;
     }
