Main Categories collapse maximum number is changed by 6

--- a/src/pages/404.html
+++ b/src/pages/404.html
@@ -5,6 +5,8 @@
 <body>
     <h1>404 Not Found</h1>
     <p>Oh, Nothing to See here...</p>
+    <h6>Tried with Very Very Large Brain but...</h6>
+    <h6>Can't Find Page.</h6>
     <button>
         <a href="/">Go Back to Home</a>
     </button>
