--- a/src/pages/errors/401.html
+++ b/src/pages/errors/401.html
@@ -3,10 +3,12 @@
     <title>401 Unauthorized</title>
 </head>
 <body>
-    <h1>401 Unauthorized</h1>
-    <p> Welp. You don't have any permissions to See This Novel...</p>
+    <h1>401 No Permission</h1>
+    <p>Oh, Nothing to See here...</p>
+    <h6>It Needs Very Very Yuge Perm but...</h6>
+    <h6>Can't Access Page.</h6>
     <button>
-        <a href="/"> Go Back to Home</a>
+        <a href="/">Go Back to Home</a>
     </button>
 </body>
 </html>
